# keypoint-regression

./: CMakeLists.txt  main.cpp  main_onnx.cpp  main_torch.cpp  pretrained_kpt.onnx
